<resources>
    <string name="app_name">Leren</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="others">Others</string>
    <string name="action_settings">Settings</string>
    <string name="analytics">Analytics</string>
    <string name="train_weak_words">Train weak words</string>
    <string name="learn">Learn new words</string>
    <string name="practice">Practice</string>
    <string name="dictionary">Dictionary</string>

    <string name="x_means_y">%1$s means %2$s</string>
    <string name="x_is_translated_y">%1$s is translated %2$s in Dutch</string>
    <string name="uncategorized">Uncategorized</string>
    <string name="dutch">Dutch</string>
    <string name="english">English</string>
    <string name="dutch_translation">Dutch translation</string>
</resources>
